2008-02-05  Cody Russell  <bratsche@gnome.org>

        Merge from trunk:

	* gtk/gtkpaned.c (gtk_paned_set_position):
	Change queue_resize() to queue_draw(), and add a check for
	child2 != NULL in case someone calls this before there is
	a child packed in there.  (#144269 again)

2008-02-05  Cody Russell  <cody@jhu.edu>

	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.[ch]: Force non-modal transient dialogs
	to iconify with their parents on Win32.  Maintain a list of transient
	children, and whenever a window is hidden or restored we now do the
	same thing to all connected transient windows above and below the
	current window in the chain.  See comment under WM_ACTIVATE for the
	reasons why.  (#164537, #371036, #405178)

2008-01-16  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Emit
	the notify::model signal.  (#509819, David Zeuthen)

2007-12-11  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:

	* gdk/directfb/gdkdrawable-directfb.c: Applied a patch by Claudio
	Ciccani	which fixes the mixing of gdk and cairo rendering.

2007-12-09 09:56:06  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:

	* gdk/directfb/gdkgc-directfb.c:
	* gdk/directfb/gdkdrawable-directfb.c:
	* gdk/directfb/gdkdirectfb.h:
	* gdk/directfb/gdkwindow-directfb.c:
	* gdk/directfb/gdkprivate-directfb.h: Committed several patches
	(window_flip_group, no_background_pixmap_fix, opt_temp_region2,
	blit_after_cairo_fix, rect_clip_fix, fast_blend, opt_temp_region_etc,
	opt_clip_region_and_fill_rects, no_state_resets) by Denis Oliver Knopp
	which are expected to improve the performance of the DirectFB backend.
	Experimental pieces of code (GDK_DIRECTFB_NO_EXPERIMENTS) are disabled.

2007-12-06 18:45:06  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:
	
	* gdk/directfb/gdkevents-directfb.c: Committed a patch by DOK to fix